Improved the UI of PIANO & DRUMKIT - Made color & spacing corrections.

--- a/css/style.css
+++ b/css/style.css
@@ -525,6 +525,11 @@ footer {
   padding: 0 28rem;
 }
 
+.piano-modal-heading h3 {
+  font-family: 'Dancing Script', cursive;
+  font-size: 3rem;
+}
+
 .piano-button-close {
   display: flex;
   justify-content: center;
@@ -537,11 +542,19 @@ footer {
 
 .piano-play-button div {
   margin: 0 auto; 
-  height: 50px; 
-  width: 150px; 
+  height: 3rem; 
+  width: 10rem; 
   border: 1px solid purple; 
   border-radius: 1rem;
 }
+
+.piano-controls a {
+  cursor: pointer;
+}
+
+
+
+
 
 .drumkit-modal {
   position: fixed;
@@ -575,7 +588,7 @@ footer {
   margin: 5% auto;
   padding: 20px;
   border-radius: 20px;
-  background: rgb(228, 221, 189);
+  background: rgb(245, 227, 223);
 }
 
 .drumkit-button-close,
@@ -589,14 +602,20 @@ footer {
 .drumkit-beat-container {
   height: 6rem;
   width: 6rem;
-  background-color: transparent;
-  border: 1px solid #000;
+  background: linear-gradient(0.65turn, #e4cc80, #ffa2a2);
+  border: 1px solid rgb(179, 179, 179);
   border-radius: 0.5rem;
   margin: 0 0.5rem;
+  padding: 1rem 0;
 }
 
 .drumkit-modal-heading {
   padding: 0 28rem;
+}
+
+.drumkit-modal-heading h3 {
+  font-family: 'Dancing Script', cursive;
+  font-size: 2.5rem;
 }
 
 .drumkit-button-close {
@@ -619,8 +638,12 @@ footer {
 
 .drumkit-play-button div {
   margin: 0 auto; 
-  height: 50px; 
-  width: 150px; 
+  height: 3rem; 
+  width: 10rem; 
   border: 1px solid purple; 
   border-radius: 1rem;
+}
+
+.drumkit-controls a {
+  cursor: pointer;
 }
